# Parallel

./: CMakeLists.txt  ParallelConfig.cmake.in  README.md  annotated.html  class_parallel_1_1_job-members.html  class_parallel_1_1_job.html  class_parallel_1_1_thread-members.html  class_parallel_1_1_thread.html  classes.html  config_8h_source.html  debug_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cbd7f246bdf7dc0a50281a272327e6ed.html  functions.html  functions_func.html  global_8h_source.html  hierarchy.html  index.html  index.qhp  job_8h_source.html  job__p_8h_source.html  thread_8h_source.html  thread__p_8h_source.html
.github/workflows/: cmake.yml
cmake/: FindQt5.cmake  ParallelHelpers.cmake
doc/: CMakeLists.txt  Doxyfile.in
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  translations.cmake
src/kernel/: CMakeLists.txt  config.h  config.h.in  debug.cpp  debug.h  global.h  job.cpp  job.h  job_p.h  thread.cpp  thread.h  thread_p.h
test/: CMakeLists.txt
test/kernel/: CMakeLists.txt  jobtest.cpp  jobtest.h  threadtest.cpp
